style: fix gap between jokes on list

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -62,7 +62,7 @@
   &__jokes {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 16px;
   }
 }
 
